<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ForgetFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backImageView"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/bold_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createAnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backImageView"/>

    <TextView
        android:id="@+id/iamTextView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/please_enter_your_registered_email_address_for_recover_your_password"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/_11ssp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="@+id/createAnTextView"
        app:layout_constraintStart_toStartOf="@+id/createAnTextView"
        app:layout_constraintTop_toBottomOf="@+id/createAnTextView" />

    <RelativeLayout
        android:id="@+id/ETEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/issue_drawable"
        app:layout_constraintTop_toBottomOf="@+id/iamTextView">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppCompat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerVertical="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/light_gray"
                android:includeFontPadding="false"
                android:hint="@string/email"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/custom_round_corner_app_color"
        app:layout_constraintTop_toBottomOf="@+id/ETEmail"
        tools:layout_editor_absoluteX="26dp">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="end"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>