<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:windowSoftInputMode="adjustPan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_135sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:src="@drawable/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/iamTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tvWeAreGlad"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/we_are_glad_to_see_you_please_fill_your_information_to_continue"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iamTextView" />

            <RelativeLayout
                android:id="@+id/EmailLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvWeAreGlad"
                android:background="@drawable/issue_drawable">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/email"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColorHint="@color/light_gray"
                        android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/ETConformPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/issue_drawable"
                app:layout_constraintTop_toBottomOf="@+id/EmailLayout">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/AppCompat"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_centerVertical="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="password_toggle"
                    app:endIconDrawable="@drawable/custom_eye"
                    app:boxStrokeWidthFocused="0dp"
                  >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/conformPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins_regular"
                        android:includeFontPadding="false"
                        android:textColorHint="@color/light_gray"
                        android:hint="@string/password"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textSize="13sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/forgotLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ETConformPassword">


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/rememberMeImageView"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/remember_me_empty" />


                <TextView
                    android:id="@+id/rememberMeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/remember_me"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/rememberMeImageView"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/forgotPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/forgot_password"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@drawable/custom_round_corner_app_color"
                app:layout_constraintTop_toBottomOf="@+id/forgotLayout"
                tools:layout_editor_absoluteX="26dp">

                <TextView
                    android:id="@+id/loginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="end"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/dontHaveTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/signupTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/sign_up"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:textColor="@color/lighe_green"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>