<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:background="@drawable/logout_drawable"
    android:paddingTop="@dimen/_15sdp"
    android:paddingBottom="@dimen/_15sdp"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    tools:context=".fragment.LogoutDialogueFragment">

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAreYouSure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:paddingEnd="@dimen/_13sdp"
        android:text="@string/are_you_sure_logout_from_strips_amp_trips_app"
        android:textColor="#989898"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="@+id/tvLogout"
        app:layout_constraintTop_toBottomOf="@+id/tvLogout"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvNotNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/not_now"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/tvAreYouSure"
        app:layout_constraintTop_toBottomOf="@+id/tvAreYouSure" />

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/logout_drawable"
        android:backgroundTint="@color/lighe_green"
        app:layout_constraintBottom_toBottomOf="@+id/tvNotNow"
        app:layout_constraintStart_toEndOf="@+id/tvNotNow"
        app:layout_constraintTop_toTopOf="@+id/tvNotNow">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>