<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePasswordActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backImageView"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/bold_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="@+id/backImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backImageView"
        app:layout_constraintTop_toTopOf="@+id/backImageView" />

    <RelativeLayout
        android:id="@+id/EmailLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/issue_drawable"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:boxStrokeWidth="0dp"
            android:layout_centerVertical="true"
            style="@style/AppCompat"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/custom_eye"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:textColorHint="@color/light_gray"
                android:hint="@string/old_password"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/NewPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/issue_drawable"
        app:layout_constraintTop_toBottomOf="@+id/EmailLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_centerVertical="true"
            app:boxStrokeWidth="0dp"
            style="@style/AppCompat"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/custom_eye"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:maxLength="15"
                android:textColorHint="@color/light_gray"
                android:hint="@string/new_password"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:textSize="13sp" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ETConformPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/issue_drawable"
        app:layout_constraintTop_toBottomOf="@+id/NewPasswordLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/AppCompat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerVertical="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/custom_eye"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conformPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/confirm_password"
                android:singleLine="true"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:textColorHint="@color/light_gray"
                android:textSize="13sp"/>

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/saveLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:background="@drawable/custom_round_corner_app_color"
        app:layout_constraintTop_toBottomOf="@+id/ETConformPassword"
        tools:layout_editor_absoluteX="26dp">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="end"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>